--- a/styles.css
+++ b/styles.css
@@ -240,9 +240,10 @@ a {
     }
     .nav-links li {
         list-style: none;
-        font-size: 1.3rem;
+        font-size: 1.5rem;
         text-align: center;
         padding: 0 0 1rem 0;
+        margin: 0;
     }
     /* When the menu toggle is checked, display the nav-links */
     .menu-toggle:checked + .hamburger-menu + .nav-links {
@@ -621,6 +622,22 @@ a {
     font-size: 2.5rem;
     line-height: 1.2;
     padding: 0.5rem 15rem 0 5rem;
+    margin: 1rem 0 2rem 0;
+}
+
+.main-hero-button {
+    font-size: 2.5rem;
+    margin: 2rem 5rem;
+    padding: 0.5rem 1.5rem;
+    background-color: rgb(98, 45, 134);
+    color: rgb(166, 120, 197);
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.main-hero-button:hover {
+    background-color: rgb(200, 151, 233);
+    color: rgb(98, 45, 134);
 }
 
 /* Image Styling */
@@ -647,7 +664,7 @@ a {
     flex-direction: row;
     justify-content: left;
     align-items: left;
-    padding: 1rem 55rem 1rem 0;
+    padding: 1rem 61.5% 1rem 0;
     min-height: 5rem;
     min-width: auto;
 }
@@ -662,7 +679,7 @@ a {
 }
 @media (max-width: 1028px) { 
     .main-hero.container {
-        padding: 7rem 3rem 2rem 3rem;
+        padding: 7rem 3rem 0rem 3rem;
     }
 
     .main-hero-text {
@@ -681,11 +698,21 @@ a {
         font-size: 2rem;
         line-height: 1.1;
         padding: 0;
-        margin: 0 1rem;
+        margin: 2rem 1rem;
+    }
+    .main-hero-button {
+        font-size: 2rem;
+        margin: 1rem;
+    }
+    
+    .main-hero-button:hover {
+        background-color: rgb(200, 151, 233);
+        color: rgb(98, 45, 134);
     }
 
     .main-hero-image{
-        padding: 0 1rem 1rem 1.2rem;
+        margin: 0;
+        padding: 3rem 1rem 1rem 1.2rem;
         min-width: 95vw;
     }
     .main-hero-image img{
@@ -694,7 +721,7 @@ a {
     }
 
     .main-hero-social-container .footer-social {
-        margin: 1rem 1rem;
+        margin: 1rem 1.2rem;
         padding: 0;
     }
 }
@@ -729,6 +756,21 @@ a {
         text-align: left; /* Center-align text */
         padding: 0.2rem 6rem 2rem 3rem;
     }
+    
+    .main-hero-button {
+        font-size: 2rem;
+        margin: 1rem;
+        padding: 0.5rem 0.5rem;
+        background-color: rgb(98, 45, 134);
+        color: rgb(166, 120, 197);
+        border-radius: 5px;
+        text-decoration: none;
+    }
+    
+    .main-hero-button:hover {
+        background-color: rgb(200, 151, 233);
+        color: rgb(98, 45, 134);
+    }
 
     .main-hero-image {
         padding: 2rem 2rem; /* Scale down the image */
@@ -746,7 +788,7 @@ a {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 0.5rem 5rem 1rem 2rem;
+        padding: 0 30% 0 0;
         margin: 0 4rem 0 0;
     }
 
@@ -786,18 +828,38 @@ a {
         font-size: 1.7rem; /* Smaller font for extra small screens */
         line-height: 2rem;
         padding: 0px;
-        margin: 0;
+        margin: 0 0 2rem 0;
         text-align: left;
+    }
+
+    .main-hero-button {
+        font-size: 1.5rem;
+        margin: 0;
+        padding: 0.5rem 0.5rem;
+        background-color: rgb(98, 45, 134);
+        color: rgb(166, 120, 197);
+        border-radius: 5px;
+        text-decoration: none;
+    }
+    
+    .main-hero-button:hover {
+        background-color: rgb(200, 151, 233);
+        color: rgb(98, 45, 134);
     }
     .main-hero-social-container {
         display: flex;
         gap: 1rem;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 0px; 
+        justify-content: left;
+        align-items: left;
+        padding: 0 20% 0 0;
         max-height: 4rem;
         margin: 1rem 0 1rem 0;
+    }
+
+    .main-hero-social-container .footer-social {
+        margin: 0;
+        padding: 0;
     }
 
     .main-hero-social-container a{
@@ -819,6 +881,18 @@ a {
     .main-hero-image img {
         min-width: 95vw;
         padding: 0 0.5rem 0 0;
+    }
+}
+@media (max-width: 360px) { /* Specific to XS */
+    .main-hero-social-container {
+        display: flex;
+        gap: 1rem;
+        flex-direction: column;
+        justify-content: left;
+        align-items: left;
+        padding: 0px;
+        max-height: 4rem;
+        margin: 1rem 0 1rem 0;
     }
 }
 
@@ -2362,19 +2436,32 @@ a {
     display: flex;
     align-items: left;
     justify-content: left;
+    margin: 4rem 0;
+}
+
+.hero-activismo h1{
+    font-size: 3rem;
+}
+.hero-activismo p{
+    font-size: 2rem;
+    margin: 0;
+    padding: 1rem 0 0 0;
+}
+.hero-activismo a{
+    padding: 1rem 0.5rem;
+    font-size: 2rem;
 }
 .cta-button-activismo {
     margin: 1rem 0rem;
-    padding: 1rem 2rem 1rem 0.6rem;
+    padding: 1rem 2rem 1rem 1rem;
     background-color: rgb(98, 45, 134);
     color: rgb(166, 120, 197);
     border-radius: 5px;
     text-decoration: none;
 }
-
 .cta-button-activismo:hover {
-    background-color: rgba(98, 45, 134, 0.6);
-    color: rgb(98, 45, 134);
+    background-color: rgb(180, 131, 212);
+    color: rgb(93, 7, 150);
 }
 
 /* Responsive Design */
@@ -2467,14 +2554,16 @@ a {
         text-align: left;
         max-width: 100vw;
         overflow-x: hidden;
-        font-size: 1.5rem;
+        font-size: 1.8rem;
+    }
+    .hero-activismo a{
+        font-size: 1.8rem;
     }
     .cta-button-activismo {
         padding: 1rem 2rem;
         border-radius: 10px;
         text-decoration: none;
         min-width: 20vw;
-        font-size: 1.5rem;
     }
 }
 
@@ -2482,16 +2571,28 @@ a {
 
 /* Hero Section for Formacion */
 .hero-formacion {
-    min-height: 0vh;
-    background-color: rgba(214, 128, 138, 0.6) ; /* Color de fondo similar a la imagen */
+    min-height: 40vh;
+    background-color: rgba(255, 128, 128, 0.6); /* Color de fondo similar a la imagen */
     padding: 3rem 1rem;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;
+    margin: 4rem 0;
 }
- .hero-formacion h1{
-    color: rgb(214, 128, 138);
- }
+
+.hero-formacion h1{
+    font-size: 3rem;
+    color: rgb(255, 128, 128);
+}
+.hero-formacion p{
+    font-size: 2rem;
+    margin: 0;
+    padding: 1rem 0 0 0;
+}
+.hero-formacion a{
+    padding: 1rem 0.5rem;
+    font-size: 2rem;
+}
 
 .cta-button-formacion {
     padding: 1rem 1rem 1rem 0.7rem;
